@@ -5795,4 +5795,9 @@
 	  UART8 DMA configs.  From Mike Smit (2013-10-18).
 	* arch/arm/src/stm32/Kconfig:  DMA priority corrections from Mike Smith
 	  (2013-10-18).
-
+	* arch/arm/src/stm32/stm32*_dma.c, stm32_sdio.c, and stm32_dma.h:
+	  Changes to the stm32_dmacapable API. In order to correctly verify that
+	  a buffer can be transferred, the transfer count and the CCR value are
+	  required.  Implemented stm32_dmacapable for stm32f1xx devices. Enhanced
+	  stm32_dmacapable for stm32f2xx and stm32f4xx devices to check for
+	  additional conditions that will cause DMA to fail or lose data (2013-10-18).
